@@ -37,6 +37,7 @@ git-annex (5.2015022) UNRELEASED; urgency=medium
     doesn't exist or git config fails for some reason.
   * fromkey --force: Skip test that the key has its content in the annex.
   * fromkey: Add stdin mode.
+  * registerurl: New plumbing command for mass-adding urls to keys.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Feb 2015 14:16:03 -0400
 
